--- a/1.html
+++ b/1.html
@@ -12,7 +12,7 @@
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
-<h2><a href="https://www.w3.org/standards/webdesign/htmlcss", target="_blank", title="HTML & CSS - W3C">HTML 이란 무엇인가</a></h2>
+<h2><a href="https://www.w3.org/standards/webdesign/htmlcss", target="_blank", title="HTML & CSS - W3C">HTML</a></h2>
 Hypertext Markup Language (HTML) is the standard markup Language for <strong>creating <u>web</u> pages</strong> and web application.
 <br>
 The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
